# gemini-mcp-server

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  gemini-config.json  pyproject.toml  setup-gemini-integration.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
gemini_mcp/: __init__.py  __main__.py  gemini_integration.py  server.py
tests/: __init__.py  test_gemini_integration.py  test_server.py
